Empty folder placeholder Fix long text overflow in service messages Fix two stickers margin in stickers helper

--- a/src/scss/partials/_chatBubble.scss
+++ b/src/scss/partials/_chatBubble.scss
@@ -1671,6 +1671,7 @@ $bubble-margin: .25rem;
     align-items: center;
     justify-content: center;
     text-align: center;
+    word-break: break-word;
 
     i {
       font-style: normal;
